# PythonAdvancedNovember2025

./: .gitignore  Member.py  MemberWithProperties.py  Person.py  PersonInvestigation.py  Team.py  api_async_investigation.py  api_investigation.py  builder_investigation.py  daomod_investigation.py  database_cli.py  database_intro.py  decorator_investigation.py  function_programming_intro.py  generator_investigation.py  inheritance_investigation.py  mathmod.py  matplotlib_interactivity.py  matplotlib_sample.py  member_dao.py  member_database.db  mod_investigation.py  pyqt6_async_investigation.py  pyqt_investigation.py  sample_notebook.ipynb  sorting_investigation.py  strategy_investigation.py  testdb.db  testdb.db-shm  testdb.db-wal  timing_decorator.py  tk_investigation.py  type_hints.py
.github/workflows/: python-app.yml
flask_intro/: app.py  web_dao.py
flask_intro/templates/: _nav.html  index.html  members.html
member_manager/: member_database.db  pyproject.toml
member_manager/src/member_manager/: __init__.py  member.py  member_dao.py
pt_modules/: pyproject.toml
pt_modules/src/pt_text_utils/: __init__.py  utils.py
tests/: noatest_mathmod.py  test_member_dao.py
