[build-system]
# Tells Python which build system to use
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Basic project metadata
name = "member_manager"               # change to your project name
version = "0.1.0"
description = "Python Library For Managing Members in a database"
authors = [
  { name = "Aidan Killeen", email = "aidan.killeen@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

# Runtime dependencies (install with pip when someone uses your library)
dependencies = [

]

[tool.setuptools.packages.find]
# Tells setuptools where to find your code
where = ["src"]